@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="3.3.1" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="3.4.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.tulip" version="2.8.1" />
@@ -18,7 +18,11 @@
         <website>http://www.subtitles.gr/</website>
         <source>https://github.com/Twilight0/service.subtitles.subtitles.gr/</source>
         <platform>all</platform>
-        <news>[B]3.3.1[/B]
+        <news>[B]3.4.0[/B]
+- Code related tweaks, particularly how routing is handled
+- Added ability to save locally subtitles and/or zips from sources
+
+[B]3.3.1[/B]
 - Added the forgotten string
 
 [B]3.3.0[/B]
